--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Movie Database (TMDB)</title>
+    <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <!-- /Bootstrap 5 -->
     <script defer src="./javacript/script.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 
@@ -62,8 +64,8 @@
             <span class="fs-1">Welcome.</span><br>
             <span class="fs-2">Millions of movies, TV shows and people to discover. Explore now.</span>
             <form id="form" class="form mt-5">
-                <input type="text" placeholder="Search for a movie,tv show,person...." class="search">
-                <input class="search-btn" id="search" type="submit" value="Search">
+                <input type="text" placeholder="Search for a movie,tv show,person...." id="search" class="search-input">
+                <button class="search-btn" id="search-button" type="button">Search</button>
             </form>
         </div>
     </section>
@@ -89,30 +91,8 @@
                 <h5 id="data_of_movie" class="data_of_movie">Sep 28,2018</h5>
             </div>
         </div>
-        <div class="movie">
-            <img src="./images/usa.jpg" alt="movie">
-            <div class="movie-info">
-                <span class="green">9.8</span>
-                <h3>Movie title</h3>
-                <h5 id="data_of_movie" class="data_of_movie">Sep 28,2018</h5>
-            </div>
-        </div>
-        <div class="movie">
-            <img src="./images/usa.jpg" alt="movie">
-            <div class="movie-info">
-                <span class="green">9.8</span>
-                <h3>Movie title</h3>
-                <h5 id="data_of_movie" class="data_of_movie">Sep 28,2018</h5>
-            </div>
-        </div>
-        <div class="movie">
-            <img src="./images/usa.jpg" alt="movie">
-            <div class="movie-info">
-                <span class="green">9.8 </span>
-                <h3 class="movie_title">Movie title</h3>
-                <h5 class="data_of_movie">Sep 28,2018</h5>
-            </div>
-        </div> -->
+     -->
+
     </main>
 </body>
 
