--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </div>
     </section>
-    <main id="main">
+    <main id="main" class="main">
         <!-- <div class="movie">
             <img src="./images/usa.jpg" alt="movie">
             <div class="movie-info">
@@ -92,12 +92,27 @@
             </div>
         </div>
      -->
-
-        <div id="movies-list">
+        <div id="movies-list" class="movies-list">
 
         </div>
 
     </main>
+    <!-- /What is popular-->
+
+    <!-- Free To Watch -->
+    <section class="freeToWatch">
+        <div class="m-5">
+            <span class="fs-2"> Free To Watch</span>
+            <div class="freeMovies m-5">
+                <a href="#" class="m-3 fw-bold freeMoviee active">Movies</a>
+                <a href="#" class="m-3 fw-bold freeMoviee">TV</a>
+            </div>
+        </div>
+        <main id="main-free" class="main">
+            <div id="movies-list-free" class="movies-list">
+            </div>
+        </main>
+    </section>
 </body>
 
 </html>
