--- a/index.html
+++ b/index.html
@@ -83,15 +83,6 @@
         </div>
     </section>
     <main id="main" class="main">
-        <!-- <div class="movie">
-            <img src="./images/usa.jpg" alt="movie">
-            <div class="movie-info">
-                <span class="green">9.8</span>
-                <h3>Movie title</h3>
-                <h5 id="data_of_movie" class="data_of_movie">Sep 28,2018</h5>
-            </div>
-        </div>
-     -->
         <div id="movies-list" class="movies-list">
 
         </div>
@@ -113,6 +104,67 @@
             </div>
         </main>
     </section>
+
+    <!-- /FREE TO WATCH -->
+
+    <!-- Tranding -->
+    <section class="tranding">
+        <div class="m-5">
+            <span class="fs-2">Trending</span>
+            <div class="trendMovies m-3">
+                <a href="#" class="m-3 fw-bold trendMoviee active">Today</a>
+                <a href="#" class="m-3 fw-bold trendMoviee">This Week</a>
+            </div>
+        </div>
+        <main id="main-trand" class="main">
+            <div id="trendMovie" class="main-trend-movie"></div>
+        </main>
+    </section>
+    <!-- Tranding -->
+
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row ">
+                <div class="col-md-3 footer-1">
+                    <img class="footer-logo" src="./images/tmdb2.svg" alt="footer-logo">
+                    <button class="footer-button">Hi Sulaymon!</button>
+                </div>
+                <div class="col-md-2 footer-main">
+                    <h3>THE BASICS</h3>
+                    <a href="#">About TMDB</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Support Forums</a>
+                    <a href="#">API</a>
+                    <a href="#">System Status </a>
+
+                </div>
+                <div class="col-md-2  footer-main">
+                    <h3>GET INVOLVED</h3>
+                    <a href="#">Contribution Bible</a>
+                    <a href="#">3rd Party Applications</a>
+                    <a href="#">Add New Movie</a>
+                    <a href="#">Add New TV Show</a>
+                </div>
+                <div class="col-md-2  footer-main">
+                    <h3>COMMUNITY</h3>
+                    <a href="#">Guidelines</a>
+                    <a href="#">Discussions</a>
+                    <a href="#">Leaderboard</a>
+                    <a href="#">Twitter</a>
+
+                </div>
+                <div class="col-md-2 footer-main">
+                    <h3>LEGAL</h3>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">API Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- /Footer -->
 </body>
 
 </html>
